postgres.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres
  template:
    metadata:
      labels:
        name: postgres
    spec:
      containers:
      - image: postgres:alpine
        name: postgres
        volumeMounts:
          - name: postgres-nfs
            mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: postgres-nfs
        persistentVolumeClaim:
          claimName: nfs
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: postgres
  name: db
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: postgres
  type: ClusterIP
