drone.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: drone
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres
  template:
    metadata:
      labels:
        name: postgres
    spec:
      containers:
      - image: postgres:alpine
        name: postgres
        volumeMounts:
          - name: drone-data
            mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: drone-data
        persistentVolumeClaim:
          claimName: pvc-drone
---
apiVersion: v1
kind: Service
metadata:
  namespace: drone
  labels:
    name: postgres
  name: db
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: postgres
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  namespace: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      name: drone
  template:
    metadata:
      labels:
        name: drone
    spec:
      containers:
        - name: drone
          image: drone/drone:1.0.0-linux-arm
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            limits:
              memory: "100Mi"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: drone
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: drone
  sessionAffinity: None
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone-ingress
  namespace: drone
spec:
  rules:
  - host: drone.servidor.local
    http:
      paths:
      - path: /
        backend:
          serviceName: drone
          servicePort: 80
